--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
         </div>
       </div>
       <nav>
-        <ul class="nav">
-          <li class="nav-item"><a href="/">Home</a></li>
-          <li class="nav-item"><a href="#">About</a></li>
-          <li class="nav-item"><a href="#">Contact</a></li>
-        </ul>
+        <a class="nav-item" href="/">Home</a>
+        <a class="nav-item" href="#">About</a>
+        <a class="nav-item" href="#">Contact</a>
       </nav>
     </header>
     <main class="container">
