New installed PWA menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="bar3"></div>
         </div>
       </div>
-      <nav>
+      <nav id="web-navbar">
         <a class="nav-item" href="/">Home</a>
         <a class="nav-item" href="#">About</a>
         <a class="nav-item" href="#">Contact</a>
@@ -82,6 +82,11 @@
     </main>
     <footer>
       <p>Footer Content</p>
+      <nav id="app-navbar">
+        <a class="nav-item" href="/"><img class="menu-icon" src="btns/home.png" alt="Home Icon"/></a>
+        <a class="nav-item" href="#"><img class="menu-icon" src="btns/about.png" alt="About Icon"/></a>
+        <a class="nav-item" href="#"><img class="menu-icon" src="btns/contact.png" alt="Contact Icon"/></a>
+      </nav>
     </footer>
     <script src="script.js"></script>
   </body>
